removing fail ignore from pom

--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
 				    <excludes>
                         <exclude>**/RunCucumberTests.java</exclude>
                     </excludes>
-					<testFailureIgnore>true</testFailureIgnore>
+					<!--testFailureIgnore>true</testFailureIgnore-->
 				</configuration>
 			</plugin>
 			<plugin>
